Compatible with Java 17 LTS